2002-09-01  Jaka Mocnik  <jaka@gnu.org>
	
	* configure.in: version 1.99.1. tagged as GHEX_1_99_1.
	* src/ghex-window.c (ghex_window_listener): sync "Character Table" and
	"Converter" items in all windows.
	(ghex_window_sync_*_item): sync items in all windows.
	* src/converter.c (create_converter): connect a signal to delete
	event of the window.
	(converter_delete_event_cb): deselect "Converter" item in all
	windows.
	* src/chartable.c (create_char_table): connect a signal to delete
	event of the window.
	(char_table_delete_event_cb): deselect "Character Table" item in all
	windows.
	* src/ui.c (revert_cb): set win->changed to FALSE. fixes #90240.
	(raise_and_focus_widget): use gtk_window_present();

2002-09-01  Jaka Mocnik  <jaka@gnu.org>

	* src/findreplace.c (replace_all_cb): fixed a replace all bug.

2002-08-30  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: fixed block marking.
	made clipboard support work.
	* src/ui.c: handlers for cut, copy and paste verbs.
	* src/ghex-ui.xml: commands and menu items for cut/copy/paste.

2002-08-28 Irene Ryan <irene.ryan@sun.com>

	* help/C/ghex2.xml : updated to reflect changes to UI and to fix 
	http://bugzilla.gnome.org/show_bug.cgi?id=91025 
	* help/C/ghex2-C.omf : renamed to reflect XML filename and updated
	with new version number and date info
	* help/C/l10n.txt : new file with screenshot instructions for L10N team
	* help/C/figures/ghex_window_empty.png : new screenshot
	* help/C/figures/ghex_window_opn.png : new screenshot

2002-08-19  Ross Burton  <ross@burtonini.com>

	* ghex.desktop.in: Fix the desktop file so that it validates and
	is sane.

2002-08-12  Aruna P R <aruna.pou@wipro.com>
	
	* src/preferences.c : preference dialog is connected to "delete-event" 
	which hides the dialog when "Esc" is used for closing the dialog. 
	Fix for #90298

2002-07-25  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c (ghex_window_listener): allow opening dialogs
	even if win->gh == NULL.

2002-07-25  Jaka Mocnik  <jaka@gnu.org>