@@ -28,7 +28,7 @@ PKG_CHECK_MODULES(GHEX,
 AC_SUBST(GHEX_CFLAGS)
 AC_SUBST(GHEX_LIBS)
 
-PKG_CHECK_MODULES(GAILUTIL, gail >= 1.0.0)
+PKG_CHECK_MODULES(GAILUTIL, gail >= 0.17)
 AC_SUBST(GAILUTIL_CFLAGS)
 AC_SUBST(GAILUTIL_LIBS)
 
