@@ -2,7 +2,7 @@
 Encoding=UTF-8
 _Name=Hex Editor
 _Comment=GNOME Hexadecimal Editor
-Exec=ghex2
+Exec=ghex2 %F
 Terminal=false
 Type=Application
 Icon=gnome-ghex.png
