@@ -1,3 +1,10 @@
+2002-09-19  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/ghex-window.c (ghex_window_new): set default width and height.
+	* configure.in: require gail >= 0.17.
+	* ghex.desktop.in (Exec): add %F to enable passing filenames when
+	items are dragged on the launcher.
+
 2002-09-01  Jaka Mocnik  <jaka@gnu.org>
 	
 	* configure.in: version 1.99.1. tagged as GHEX_1_99_1.
